--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node index",
-    "start:dev": "nodemon index PORT=8080"
+    "start:dev": "PORT=8080 nodemon index "
   },
   "dependencies": {
     "express": "^4.18.1"
